--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,6 +1,5 @@
 // app global css in SCSS form
 
-
 // *{
 //   outline: 1px solid limegreen !important;
 // }
@@ -10,14 +9,37 @@
 //   background-color: rgb(0 100 0 / 0.1) !important;
 // }
 
-.tabs-mobile{
-   @media (min-width: $breakpoint-md-min) {
+.tabs-mobile {
+  @media (min-width: $breakpoint-md-min) {
     display: none;
   }
 }
 
-.tabs-desktop{
-   @media (max-width: $breakpoint-md-min) {
+.tabs-desktop {
+  @media (max-width: $breakpoint-md-min) {
     display: none;
   }
 }
+
+.hero {
+  @media (min-width: $breakpoint-md-min) {
+    min-height: 70vh;
+    max-width: 1140px;
+  }
+
+  @media (max-width: $breakpoint-md-min) {
+    min-height: 50vh;
+  }
+}
+
+.header-text {
+  @media (min-width: $breakpoint-md-min) {
+    
+  }
+
+  @media (max-width: $breakpoint-md-min) {
+    font-size: 38px;
+  }
+}
+
+
