--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -34,7 +34,7 @@
 
 .header-text {
   @media (min-width: $breakpoint-md-min) {
-    
+    font-weight: 400;
   }
 
   @media (max-width: $breakpoint-md-min) {
